# swaddle-assistant-v2

./: .env  .gitignore  API_DOCUMENTATION.md  Dockerfile  LICENSE  README.md  postman_collection.json  pyproject.toml
app/: config.py  constants.py  main.py  persona.txt
app/models/: schemas.py  user_context.py
app/routers/: chat.py  chat_history.py
app/services/: chat_history.py  chat_history_store.py  intent_router.py  model_wrapper.py  streaming.py  supabase_client.py  system_prompt.py  task_manager.py  user_context.py
app/services/ai/: __init__.py  anthropic_client.py  benchmark.py  model.py  response.py  sse.py  streaming.py
migrations/: create_chat_messages_table.sql
tests/: test_chat_router.py  test_intent_router.py
